# chess-rag-cli

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  schema.sql  test_insert.py
chess_rag/: cli.py
chess_rag/commands/: cmd_init.py  cmd_status.py
chess_rag/helpers/: add_user_handler.py  db_handler.py  list_users_handler.py
notebooks/: find_brilliant_moves.py  sqlite_vec_test.ipynb  test_vec_chess.ipynb  utils.py  vec_chess.py
