[project]
name = "chess-rag-cli"
version = "1.0.0"
description = "Testing RAG on chess.com PGN data"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1",
]

[project.scripts]
chess-rag = "chess_rag.cli:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "chess_rag"
